monitoring/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1 # Para Traefik
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`metrics.migbertweb.xyz`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
  tls:
    secretName: grafana-tls
