monitoring/ver.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`metrics.migbertweb.xyz`)
    services:
    - name: monitoring-grafana
      port: 80
  tls:
    secretName: grafana-tls
